--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "elevenlabs": "^1.59.0",
     "lucide-react": "^0.344.0",
     "next": "^16.1.6",
     "react": "^18.3.1",
