--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vis.gl/react-google-maps": "^1.7.1",
     "axios": "^1.7.2",
     "elevenlabs": "^1.59.0",
     "lucide-react": "^0.344.0",
